[gd_scene load_steps=33 format=2]

[ext_resource path="res://models/babybird.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/bird.tscn" type="PackedScene" id=3]
[ext_resource path="res://models/rock.tscn" type="PackedScene" id=4]
[ext_resource path="res://models/tree2.tscn" type="PackedScene" id=5]
[ext_resource path="res://models/rose.tscn" type="PackedScene" id=6]
[ext_resource path="res://models/bee.tscn" type="PackedScene" id=7]
[ext_resource path="res://models/YellowCube.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/endlesslevel.gd" type="Script" id=9]
[ext_resource path="res://BubblegumSans-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://sounds/birdgamesongbirdsounds.ogg" type="AudioStream" id=12]
[ext_resource path="res://sounds/bfh1_hit_07.ogg" type="AudioStream" id=13]
[ext_resource path="res://buttons/transparentDark01.png" type="Texture" id=14]
[ext_resource path="res://buttons/flatDark02.png" type="Texture" id=15]
[ext_resource path="res://buttons/flatDark04.png" type="Texture" id=16]
[ext_resource path="res://buttons/transparentDark03.png" type="Texture" id=17]
[ext_resource path="res://buttons/transparentDark04.png" type="Texture" id=18]
[ext_resource path="res://buttons/flatDark05.png" type="Texture" id=19]
[ext_resource path="res://sounds/Rise06.ogg" type="AudioStream" id=20]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 26.371, 5, 5 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.172549, 0.733333, 0.286275, 1 )

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 2 )
size = Vector2( 50, 1000 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 50, 1, 1000 )

[sub_resource type="BoxShape" id=5]

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 11 )

[sub_resource type="ProceduralSky" id=10]
sky_top_color = Color( 0.65098, 0.956863, 0.921569, 1 )
sky_horizon_color = Color( 0.921569, 0.219608, 0.713726, 1 )

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 10 )
fog_sun_color = Color( 0.921569, 0.219608, 0.811765, 1 )
fog_sun_amount = 0.05
dof_blur_far_distance = 30.0

[sub_resource type="DynamicFont" id=12]
size = 52
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=13]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 50, 52, 50 ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Spatial" type="Spatial" groups=[
"game",
]]
script = ExtResource( 9 )

[node name="ObjectDestroyer" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 3.74759, 0, 0, 0, 1, 0, 0, -3.27642 )

[node name="CollisionShape" type="CollisionShape" parent="ObjectDestroyer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.588, -5 )
shape = SubResource( 1 )

[node name="bird2" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.334984, 0.0477509, 3.55271e-15, -0.0383562, 0.417033, 0, 1.77636e-15, 4.44089e-16, 0.370695, -4.97555, 6.9582, 23.3162 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 500 )
shape = SubResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.244, 4.919 )

[node name="bird" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.33579, -0.0379854, 0, 0.030512, 0.418036, 0, 0, 0, 0.370695, 3.911, 5.63741, 30.9214 )

[node name="babybird" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.260673, 0, 2.47129e-08, 0, 0.277735, 0, -2.27888e-08, 0, -0.282682, 0, 0, 12 )

[node name="ConveyerBelt" type="KinematicBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ConveyerBelt"]
shape = SubResource( 5 )
disabled = true

[node name="Cube4" parent="ConveyerBelt" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.918701, 1.47141, 87.2558 )

[node name="rose" parent="ConveyerBelt" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80.963 )

[node name="Cube" parent="ConveyerBelt" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.725, 2.5, 22.705 )

[node name="Cube2" parent="ConveyerBelt" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.982, 2.5, 68.728 )

[node name="Cube3" parent="ConveyerBelt" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.93981, 1.47141, 177.778 )

[node name="rock" parent="ConveyerBelt" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.504436, 34.0734 )

[node name="tree2" parent="ConveyerBelt" instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 2.95849, 0, 166.696 )

[node name="bee" parent="ConveyerBelt" instance=ExtResource( 7 )]
transform = Transform( -2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, -2.95, 2, 43.74 )

[node name="DialogueBox" type="ColorRect" parent="."]
margin_right = 601.0
margin_bottom = 135.0
color = Color( 0.454902, 0.431373, 0.431373, 0.623529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DialogueBox"]
margin_left = 4.0
margin_top = 10.0
margin_right = 593.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 6 )
text = "Dad:
It's a fine day for flying! The more you practice, the higher you'll
 be able to fly!  Collect the cubes to practice flying."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CubesLabel" type="Label" parent="."]
margin_left = 434.0
margin_top = 966.0
margin_right = 571.0
margin_bottom = 1002.0
custom_fonts/font = SubResource( 7 )
text = "Cubes: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblFlightLevel" type="Label" parent="."]
margin_left = 18.0
margin_top = 976.0
margin_right = 172.0
margin_bottom = 1012.0
custom_fonts/font = SubResource( 7 )
text = "Flight Level: 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
anchor_right = 0.047
anchor_bottom = 0.02
margin_left = 249.0
margin_top = 400.0
margin_right = 343.8
margin_bottom = 421.52
custom_fonts/font = SubResource( 8 )
text = "Try Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblGameOver" type="Label" parent="."]
visible = false
margin_left = 166.0
margin_top = 273.0
margin_right = 485.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 9 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 5.672
autoplay = true

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = 3.782

[node name="btnUp" type="TouchScreenButton" parent="."]
position = Vector2( 103, 724 )
normal = ExtResource( 14 )
pressed = ExtResource( 15 )
action = "ui_up"

[node name="btnLeft" type="TouchScreenButton" parent="."]
position = Vector2( 48, 776 )
normal = ExtResource( 17 )
pressed = ExtResource( 16 )
action = "ui_left"

[node name="btnRight" type="TouchScreenButton" parent="."]
position = Vector2( 146, 773 )
normal = ExtResource( 18 )
pressed = ExtResource( 19 )
action = "ui_right"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.962767, -0.245431, -0.113327, -0.270332, 0.874084, 0.403606, 0, 0.419214, -0.907887, 0, 20, 0 )
light_color = Color( 0.964706, 0.235294, 0.117647, 1 )
shadow_enabled = true

[node name="LevelUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = 10.0

[node name="lblLevelUp" type="Label" parent="."]
visible = false
margin_left = 225.0
margin_top = 382.0
margin_right = 390.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 12 )
text = "Level Up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="lblLevelUp"]
autoplay = "animatetext"
anims/animatetext = SubResource( 13 )

[node name="tmrLevelUpLabel" type="Timer" parent="."]

[node name="tmrGameWonFade" type="Timer" parent="."]

[node name="ScreenFade" type="ColorRect" parent="."]
visible = false
margin_left = -122.0
margin_right = 687.0
margin_bottom = 1139.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenFade"]
autoplay = "screenfade"
anims/screenfade = SubResource( 14 )

[connection signal="area_entered" from="ObjectDestroyer" to="." method="_on_ObjectDestroyer_area_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="tmrLevelUpLabel" to="." method="_on_tmrLevelUpLabel_timeout"]
[connection signal="timeout" from="tmrGameWonFade" to="." method="_on_tmrGameWonFade_timeout"]
